# mcp_data_api

./: .gitignore  MCP_CLIENT_CONFIG.md  README.md  mcp-client-config.json  pyproject.toml  requirements.txt  sql工具curl案例.md  test_fix.py  test_session_fix.py  verify_fix.py  真实请求的curl案例.md  需求文档.md
config/: .env.example  config.yaml
docs/: API_DOCUMENTATION.md
src/: config.py  server.py
src/cache/: __init__.py  base.py  memory_cache.py
src/data_access/: __init__.py  api_provider.py  base.py  mock_provider.py
src/models/: __init__.py  api.py  category.py  execution.py  responses.py  session.py  sql.py
src/services/: __init__.py  api_service.py  category_service.py  execution_service.py  session_service.py  sql_service.py
src/tools/: __init__.py  apis.py  categories.py  executor.py  initialize.py  sql.py
src/utils/: api_list_json_clear.py  category_tree_json_clear.py  errors.py
tests/integration/: test_mcp_client.py
